force-app/main/default/objects/Contract_Request__c/Contract_Request__c.object-meta.xml
<CustomObject>
    <label>Contract Request</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Contract Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>