force-app/main/default/objects/Contract_Request__c/fields/Account_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_City__c</fullName>
    <formula>Account__r.BillingCity</formula>
    <label>Account Address City</label>
    <type>Text</type>
</CustomField>