force-app/main/default/objects/Contract_Request__c/fields/Account_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_State__c</fullName>
    <formula>Account__r.BillingState</formula>
    <label>Account Address State</label>
    <type>Text</type>
</CustomField>