force-app/main/default/objects/Contract_Request__c/fields/Account_Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Zip__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <label>Account Address Zip</label>
    <type>Text</type>
</CustomField>