force-app/main/default/objects/Contract_Request__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Paid Consultant</value>
        </filterItems>
        <infoMessage>Filter is required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Requests (Consultant)</relationshipLabel>
    <relationshipName>Contract_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>