force-app/main/default/objects/Contract_Request__c/fields/Contact_for_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Invoices__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact for Invoices</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Filtered for Contract Request Account Contacts.  Remove filter to search for Account Contact Roles</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contract_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>