force-app/main/default/objects/Contract_Request__c/fields/Contacts_Selected_for_New_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Selected_for_New_Agreement__c</fullName>
    <formula>IF(
AND( Needs_New_Agreement__c 
   ,OR(ISBLANK( Contact_for_Confirmations__c ),
       ISBLANK( Contact_for_Invoices__c ),
       ISBLANK( Contact_for_Notices__c )
      )
   )
, false
, true
)</formula>
    <label>Contacts Selected for New Agreement</label>
    <type>Checkbox</type>
</CustomField>