force-app/main/default/objects/Contract_Request__c/fields/CR_Link__c.field-meta.xml
<CustomField>
    <fullName>CR_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_140, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_140)+3) + &#39;/apex/contractrequestpage?id=&#39; + Id + &#39;&amp;optyid=&#39; + Opportunity__c , &#39;Click to view Contract Request&#39;)</formula>
    <label>CR Link</label>
    <type>Text</type>
</CustomField>