force-app/main/default/objects/Contract_Request__c/fields/Existing_Base_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Existing_Base_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Base Agreement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CESContract__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Version 3 Enabling Agreement, NAESB 2002 Enabling Agreement, NAESB 2006 Enabling Agreement, Version 3.2 Enabling Agreement</value>
        </filterItems>
        <filterItems>
            <field>CESContract__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Filtered for Contract Request Account Agreements. Remove filter to search for Parent Account Agreements</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipName>Contract_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>