force-app/main/default/objects/Contract_Request__c/fields/Facility_List__c.field-meta.xml
<CustomField>
    <fullName>Facility_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility List</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Facility_List__c.Account__c</valueField>
        </filterItems>
        <infoMessage>Filter is required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Facility_List__c</referenceTo>
    <relationshipName>Contract_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>