force-app/main/default/objects/Contract_Request__c/fields/Invoice_Accounts_Payable__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Accounts_Payable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Accounts Payable</label>
    <type>Checkbox</type>
</CustomField>