force-app/main/default/objects/Contract_Request__c/fields/Invoice_Address_is_Notice_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address_is_Notice_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Address is Notice Address</label>
    <type>Checkbox</type>
</CustomField>