force-app/main/default/objects/Contract_Request__c/fields/Needs_New_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Needs_New_Agreement__c</fullName>
    <formula>IF( CONTAINS( RecordType.Name, &#39;New Agreement&#39; )
  , True
  , False
)</formula>
    <label>Needs New Agreement</label>
    <type>Checkbox</type>
</CustomField>