force-app/main/default/objects/Contract_Request__c/fields/Needs_New_Facility_List__c.field-meta.xml
<CustomField>
    <fullName>Needs_New_Facility_List__c</fullName>
    <formula>IF( CONTAINS( RecordType.Name , &#39;TC Only&#39; )  || 
    RecordType.Name == &#39;New Agreement Only&#39;
  , False
  , True
 )</formula>
    <label>Needs New Facility List</label>
    <type>Checkbox</type>
</CustomField>