force-app/main/default/objects/Contract_Request__c/fields/Needs_New_TC__c.field-meta.xml
<CustomField>
    <fullName>Needs_New_TC__c</fullName>
    <formula>IF( NOT(RecordType.Name == &#39;New Agreement Only&#39; )
  , True
  , False
)</formula>
    <label>Needs New TC</label>
    <type>Checkbox</type>
</CustomField>