force-app/main/default/objects/Contract_Request__c/fields/New_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Agreement_Type__c</fullName>
    <description>type of agreement for the request</description>
    <inlineHelpText>type of agreement for the request</inlineHelpText>
    <label>New Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Version 4.1 Enabling Agreement</fullName>
            </value>
            <value>
                <fullName>NAESB 2006 Enabling Agreement</fullName>
            </value>
            <value>
                <fullName>NAESB 2002 Enabling Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>