force-app/main/default/objects/Contract_Request__c/fields/Number_of_Premises__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Premises__c</fullName>
    <description>the number of premises for this request</description>
    <inlineHelpText>the number of premises for this request</inlineHelpText>
    <label>Number of Premises</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>