force-app/main/default/objects/Contract_Request__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pricing</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <filterItems>
            <field>Rate__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CES C&amp;I SubProduct</value>
        </filterItems>
        <filterItems>
            <field>Rate__c.All_CES_Locations__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Rate__c.Specific_CES_Location_1__c</field>
            <operation>equals</operation>
            <valueField>$Source.CES_Office__c</valueField>
        </filterItems>
        <filterItems>
            <field>Rate__c.Specific_CES_Location_2__c</field>
            <operation>equals</operation>
            <valueField>$Source.CES_Office__c</valueField>
        </filterItems>
        <infoMessage>Filter is required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Rate__c</referenceTo>
    <relationshipName>Contract_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>