force-app/main/default/objects/Contract_Request__c/fields/Pricing_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Scenario__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pricing Scenario</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.Utility__c</field>
            <operation>equals</operation>
            <valueField>Pipeline_Scenario__c.Utility__c</valueField>
        </filterItems>
        <filterItems>
            <field>Pipeline_Scenario__c.Name</field>
            <operation>equals</operation>
            <value>Manual Contract Entry</value>
        </filterItems>
        <infoMessage>Filter required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Pipeline_Scenario__c</referenceTo>
    <relationshipName>Contract_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>