force-app/main/default/objects/Contract_Request__c/fields/Pricing_Scenario_Pipeline_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Scenario_Pipeline_Name__c</fullName>
    <formula>Pricing_Scenario__r.Pipeline__r.Name</formula>
    <label>Pricing Scenario Pipeline Name</label>
    <type>Text</type>
</CustomField>