force-app/main/default/objects/Contract_Request__c/fields/Request_Objects_Created__c.field-meta.xml
<CustomField>
    <fullName>Request_Objects_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>system field for navigation control</inlineHelpText>
    <label>Request Objects Created</label>
    <type>Checkbox</type>
</CustomField>