force-app/main/default/objects/Contract_Request__c/fields/Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Submitted</label>
    <type>Checkbox</type>
</CustomField>