force-app/main/default/objects/Contract_Request__c/fields/Request_Utility_SubType__c.field-meta.xml
<CustomField>
    <fullName>Request_Utility_SubType__c</fullName>
    <formula>IF (
  AND(
    OR( Utility__r.Utility_Code__c == &#39;Nicor&#39;,
     Utility__r.Utility_Code__c == &#39;PGLC&#39;,
     Utility__r.Utility_Code__c == &#39;NShore&#39;
     ),
    OR( Pricing__r.Name == &#39;Index Fixed Volume&#39;,
     Pricing__r.Name == &#39;Index Full Req&#39;
     )
  ), &#39;Nicor, PGLC, NShore&#39;
,
  IF (
    AND( Utility__r.Utility_Code__c == &#39;NIPSCO-Choice&#39;,
      OR ( Pricing__r.Name == &#39;Index Fixed Volume&#39;,
       Pricing__r.Name == &#39;Index Full Req&#39;,
       Pricing__r.Name == &#39;Market Price&#39;
       )
    ), &#39;NIPSCO-Choice&#39;, &#39;&#39;
  )
)</formula>
    <label>Request Utility SubType</label>
    <type>Text</type>
</CustomField>