force-app/main/default/objects/Contract_Request__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>if ( 
month(today())==12, 
date(year(today())+1, 1, 1), 
date(year(today()), month(today())+1, 1) 
)</defaultValue>
    <description>First of the month when the contract begins</description>
    <inlineHelpText>First of the month when the contract begins</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>