force-app/main/default/objects/Contract_Request__c/fields/Transport_Ex_A_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Transport_Ex_A_Pipeline__c</fullName>
    <formula>IF( Utility__r.Utility_Code__c == &#39;CNP-TX&#39;
  , Pricing_Scenario_Pipeline_Name__c  
  , null
)</formula>
    <label>Transport Ex A Pipeline</label>
    <type>Text</type>
</CustomField>