force-app/main/default/objects/Contract_Request__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Utility</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipName>Contract_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>