force-app/main/default/objects/Contract_Request__c/recordTypes/New_Agreement_and_TC.recordType-meta.xml
<RecordType>
    <fullName>New_Agreement_and_TC</fullName>
    <active>true</active>
    <description>New Agreement and New TC for new or existing premises</description>
    <label>New Agreement and TC</label>
</RecordType>