force-app/main/default/objects/Contract_Request__c/recordTypes/New_Agreement_Only.recordType-meta.xml
<RecordType>
    <fullName>New_Agreement_Only</fullName>
    <active>true</active>
    <description>New enabling Agreement only.  No TC will be requested</description>
    <label>New Agreement Only</label>
</RecordType>