force-app/main/default/objects/Contract_Request__c/recordTypes/TC_Facility_List_Existing_Agreement.recordType-meta.xml
<RecordType>
    <fullName>TC_Facility_List_Existing_Agreement</fullName>
    <active>false</active>
    <description>New TC and Facility list for an existing Agreement</description>
    <label>TC &amp; Facility List-Existing Agreement</label>
</RecordType>