force-app/main/default/objects/Contract_Request__c/recordTypes/TC_Only_Existing_Agreement.recordType-meta.xml
<RecordType>
    <fullName>TC_Only_Existing_Agreement</fullName>
    <active>true</active>
    <description>New TC only for an existing Agreement</description>
    <label>TC Only-Existing Agreement</label>
</RecordType>