force-app/main/default/objects/Contract_Request__c/validationRules/NIPSCO_Choice_Utility_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>NIPSCO_Choice_Utility_Check</fullName>
    <active>true</active>
    <description>make sure NIPSCO-Choice is selected if CES Office is Illinois</description>
    <errorConditionFormula>AND(
  CES_Office__r.Customer_Number__c == &#39;LIVE&#39;,
   Utility__r.Name == &#39;NIPSCO&#39;
)</errorConditionFormula>
    <errorDisplayField>Utility__c</errorDisplayField>
    <errorMessage>ContractReq01: NIPSCO-Choice must be selected instead of NIPSCO</errorMessage>
</ValidationRule>